# ferrum_hdl

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  TODO.md  rust-analyzer.json  rust-toolchain.toml
examples/: array.rs  blinking.rs
ferrum_blackbox/: Cargo.toml
ferrum_blackbox/src/: lib.rs
ferrum_compiler/: Cargo.toml
ferrum_compiler/src/: bitvec.rs  blackbox.rs  error.rs  generator.rs  idents.rs  main.rs  utils.rs
ferrum_compiler/src/blackbox/: array.rs  bit.rs  bitpack.rs  bitvec.rs  bundle.rs  cast.rs  index.rs  lit.rs  signal.rs  std.rs
ferrum_compiler/src/generator/: adt.rs  arg_matcher.rs  bitvec.rs  expr.rs  func.rs  generic.rs  key.rs  pattern_match.rs  struc.rs  ty_or_def_id.rs
ferrum_macros/: Cargo.toml
ferrum_macros/src/: blackbox.rs  lib.rs  pipeline.rs
ferrum_netlist/: Cargo.toml
ferrum_netlist/src/: arena.rs  backend.rs  buffer.rs  group.rs  group_list.rs  index.rs  inject_pass.rs  lib.rs  main.rs  module.rs  net_list.rs  node.rs  output.rs  params.rs  sig_ty.rs  symbol.rs  visitor.rs
ferrum_netlist/src/net_list/: const_val.rs  transform.rs
ferrum_netlist/src/node/: add.rs  bin_op.rs  bit_and.rs  bit_not.rs  bit_or.rs  bit_vec_trans.rs  case.rs  cons.rs  consta.rs  dff.rs  expr.rs  input.rs  loop_nodes.rs  merger.rs  mod_inst.rs  mux2.rs  not.rs  pass.rs  splitter.rs  sub.rs
ferrum_netlist/src/visitor/: inject_nodes.rs  reachability.rs
fhdl_blackbox/: Cargo.toml
fhdl_blackbox/src/: lib.rs
fhdl_cli/: Cargo.toml
fhdl_cli/src/: commands.rs  compiler.rs  lib.rs  styles.rs
fhdl_cli/src/commands/: gen.rs  synth.rs
fhdl_common/: Cargo.toml
fhdl_common/src/: blackbox.rs  lang_item.rs  lib.rs  synth.rs  utils.rs
fhdl_compiler/: Cargo.toml  build.rs  rust-toolchain.toml
fhdl_compiler/src/: blackbox.rs  compiler.rs  driver.rs  error.rs  eval_context.rs  generator.rs  idents.rs  main.rs  scopes.rs  utils.rs
fhdl_compiler/src/blackbox/: array.rs  bin_op.rs  bit.rs  bitpack.rs  bitvec.rs  bundle.rs  cast.rs  index.rs  lit.rs  loop_gen.rs  reg.rs  signal.rs  std.rs  un_op.rs
fhdl_compiler/src/compiler/: arena.rs  attr.rs  cons_.rs  context.rs  domain.rs  func.rs  item.rs  item_ty.rs  locals.rs  loop_gen.rs  mir.rs  pins.rs  post_dominator.rs  switch.rs  switch_tuple.rs  sym_ident.rs  trie.rs  utils.rs
fhdl_compiler/src/generator/: adt.rs  arena.rs  attr.rs  bitvec.rs  cache_encoder.rs  closure.rs  encoder.rs  expr.rs  func.rs  gen_nodes.rs  generic.rs  item.rs  item_ty.rs  locals.rs  metadata.rs  mir.rs  pattern_match.rs  temp_nodes.rs  ty_or_def_id.rs
fhdl_compiler/src/generator/metadata/: decoder.rs  encoder.rs  resolver.rs
fhdl_const_func/: Cargo.toml
fhdl_const_func/src/: lib.rs
fhdl_data_structures/: Cargo.toml
fhdl_data_structures/src/: cursor.rs  graph.rs  index.rs  index_storage.rs  lib.rs  list.rs  tree.rs
fhdl_macros/: Cargo.toml
fhdl_macros/src/: bitpack.rs  bits.rs  blackbox.rs  impl_tuple_traits.rs  lang_item.rs  lib.rs  signal_value.rs  state.rs  synth.rs  traceable.rs  utils.rs
fhdl_netlist/: Cargo.toml
fhdl_netlist/src/: arena.rs  backend.rs  buffer.rs  bvm.rs  cfg.rs  const_functions.rs  const_val.rs  cursor.rs  encoding.rs  group.rs  lib.rs  net_kind.rs  net_list.rs  netlist.rs  node.rs  node_ty.rs  params.rs  resolver.rs  sig_ty.rs  symbol.rs  utils.rs  visitor.rs  with_id.rs
fhdl_netlist/src/net_list/: const_val.rs  ident.rs  in_out.rs  list.rs  module.rs  transform.rs  with_id.rs
fhdl_netlist/src/netlist/: cursor.rs  graph.rs  ident.rs  index_storage.rs  list.rs  module.rs
fhdl_netlist/src/node/: bin_op.rs  bit_not.rs  case.rs  cons.rs  dff.rs  expr.rs  gen_node.rs  input.rs  loops.rs  memory.rs  merger.rs  mod_inst.rs  mux.rs  mux2.rs  not.rs  pass.rs  splitter.rs  switch.rs  temp_node.rs  zero_extend.rs
fhdl_netlist/src/node/mux/: embedded_muxs.rs
fhdl_netlist/src/visitor/: assert.rs  codegen.rs  dump.rs  inject_nodes.rs  reachability.rs  set_names.rs  transform.rs
fhdl_netlist/src/visitor/codegen/: verilog.rs
fhdl_sim/: Cargo.toml
fhdl_sim/src/: lib.rs  main.rs
src/: array.rs  ast.rs  bit.rs  bit_pack.rs  bit_vec.rs  bitpack.rs  bitvec.rs  blackbox.rs  bundle.rs  cast.rs  const_asserts.rs  const_functions.rs  const_helpers.rs  domain.rs  eval.rs  fhdl.net_list  index.rs  lib.rs  memory.rs  new_hdl.rs  prim_ty.rs  signal.rs  signal_fn.rs  signed.rs  simulation.rs  synthesis.rs  toolbox.rs  trace.rs  traits.rs  tuples.rs  unsigned.rs  watchable.rs
src/signal/: counters.rs  ops.rs  reg.rs  signal_fn.rs  sim.rs  wrapped.rs
src/toolbox/: shift_reg.rs
templates/simple/: Cargo.toml
templates/simple/src/: lib.rs  main.rs
tests/: bitpack.rs
