[workspace]
members = [
  ".",
  "fhdl_common",
  "fhdl_compiler",
  "fhdl_const_func",
  "fhdl_macros",
  "fhdl_netlist",
  "fhdl_cli"
]

[workspace.package]
version = "0.2.0"
description = "The HDL framework for writing FPGA firmware in Rust"
repository = "https://github.com/zshell31/ferrum_hdl"
keywords = ["fpga", "hdl", "verilog", "hardware"]
authors = ["Evgeny Nosov <evgen3188@gmail.com>"]
edition = "2021"
license = "MIT"

[workspace.dependencies]
anstyle = "1.0"
anyhow = "1.0"
bumpalo = "3.15"
clap = { version = "4.5.1", features = ["derive"] }
darling = "0.20.6"
either = "1.9.0"
if_chain = "1.0"
itertools = "0.12.1"
once_cell = "1.19.0"
petgraph = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
smallvec = { version = "1.13.1", features = ["const_generics", "serde"] }
strum = { version = "0.26.1", features = ["derive"] }
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_debug"]  }

[package]
name = "ferrum_hdl"
version.workspace = true
edition.workspace = true

[package.metadata.ferrum_hdl]
synth = true

[[example]]
name = "blinking"
crate-type = ["staticlib"]

[[example]]
name = "array"
crate-type = ["staticlib"]

[dependencies]
derive-where = "1.2.2"
fhdl_const_func = { path = "fhdl_const_func" }
fhdl_macros = { path = "fhdl_macros" }
num-bigint = "0.4.4"
num-traits = "0.2.17"
paste = "1.0.14"
smallvec = { workspace = true }
