[package]
name = "fhdl_cli"
version.workspace = true
edition.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anstyle = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.4.18", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
