[package]
name = "fhdl_cli"
version.workspace = true
edition.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anstyle = { workspace = true }
anyhow = { workspace = true }
cargo_metadata = "0.18"
clap = { workspace = true }
fhdl_netlist = { path = "../fhdl_netlist" }
rustc_version = "0.4.0"
serde = { workspace = true }
serde_json = { workspace = true }
