[package]
name = "fhdl_common"
version.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
darling = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
smallvec = { workspace = true }
strum = { workspace = true }
