[package]
name = "fhdl_compiler"
version = "0.2.0"
edition.workspace = true

[[bin]]
name = "fhdl"
path = "src/main.rs"

[[bin]]
name = "fhdl-driver"
path = "src/driver.rs"

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
anstream = "0.6.4"
anstyle = { workspace = true }
anyhow = { workspace = true }
bumpalo = { workspace = true, features = ["collections", "allocator_api"] }
either = { workspace = true }
ferrum_hdl = { path = "../" }
fhdl_blackbox = { path = "../fhdl_blackbox" }
fhdl_cli = { path = "../fhdl_cli" }
fhdl_netlist = { path = "../fhdl_netlist" }
itertools = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1.0"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
petgraph = "0.6.4"
