[package]
name = "fhdl_macros"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
darling = "0.20.3"
either = { workspace = true }
fhdl_blackbox = { path = "../fhdl_blackbox/" }
fhdl_const_func = { path = "../fhdl_const_func/" }
proc-macro2 = "1.0.66"
syn = { version = "2.0.28", features = ["full"] }
quote = "1.0.32"
