[package]
name = "fhdl_macros"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
darling = "0.20.6"
either = { workspace = true }
fhdl_common = { path = "../fhdl_common/" }
fhdl_const_func = { path = "../fhdl_const_func/" }
proc-macro2 = "1.0"
quote = "1.0"
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
syn = { version = "2.0", features = ["full"] }
