[package]
name = "fhdl_macros"
version.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
darling = "0.20.8"
either = { workspace = true }
fhdl_common = { path = "../fhdl_common/" }
fhdl_const_func = { path = "../fhdl_const_func/" }
indexmap = { workspace = true, features = ["serde"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
proc-macro-crate = "3.1.0"
quote = "1.0"
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
syn = { version = "2.0", features = ["full"] }
