[package]
name = "fhdl_netlist"
version = "0.1.0"
edition = "2021"

[dependencies]
auto_enums = "0.8.2"
bumpalo = { workspace = true, features = ["collections"] }
clap = { workspace = true }
derive-where = "1.2.5"
either = { workspace = true }
indexmap = "2.2.2"
fhdl_const_func = { path = "../fhdl_const_func/" }
ferrum_hdl = { path = "../" }
once_cell = { workspace = true }
rustc-hash = "1.1.0"
serde = { workspace = true }
smallvec = { workspace = true }
tracing = { workspace = true }

