[package]
name = "fhdl_netlist"
version.workspace = true
description = "The Ferrum HDL netlist"
repository.workspace = true
keywords.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true }
derive-where = "1.2.5"
either = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
fhdl_const_func = { path = "../fhdl_const_func/" }
ferrum_hdl = { path = "../" }
lasso = { version = "0.7.2", features = ["multi-threaded"] }
once_cell = { workspace = true }
pretty_assertions = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
tracing = { workspace = true }

