[package]
name = "fhdl_netlist"
version.workspace = true
description = "The Ferrum HDL netlist"
repository.workspace = true
keywords.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true }
derive-where = { workspace = true }
either = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
fhdl_const_func = { path = "../fhdl_const_func/" }
fhdl_data_structures = { path = "../fhdl_data_structures/" }
ferrum_hdl = { path = "../" }
lasso = { version = "0.7.2", features = ["multi-threaded"] }
once_cell = { workspace = true }
pretty_assertions = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true, features = ["union"] }
tracing = { workspace = true }

