[package]
name = "fhdl_sim"
version.workspace = true
description = "The Ferrum HDL simulation framework"
repository.workspace = true
keywords.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
trace = []

[dependencies]
vcd = "0.7.0"
ferrum_hdl = { path = "../" }
